--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 Services
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="/services">PrioritAIze</a>
+                <a class="dropdown-item" href="/service1">PrioritAIze</a>
                 <a class="dropdown-item" href="#">Task Timer</a>
                
             </li>
@@ -40,10 +40,10 @@
               </li>
            
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+          <a class="form-inline my-2 my-lg-0" href="/logout">
+          
+            <button class="btn btn-outline-success my-2 my-sm-0"  type="submit">Log Out</button>
+          </a>
         </div>
       </nav>
 
