--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
     <title> {% block title %}{% endblock title %} micro</title>
   </head>
-  <body style="background-color: #f5deb3;">
+  <body style="background-color:rgba(0,0,0,0.3);">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">OrganAIze</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
               </a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="/service1">PrioritAIze</a>
-                <a class="dropdown-item" href="#">Task Timer</a>
+                <a class="dropdown-item" href="/service2">Task Timer</a>
                
             </li>
             <li class="nav-item">
