--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
 {% block title %}home{% endblock title %}
 {% block body %}
-this is the body{% endblock body %}
+
+<div style=" background: linear-gradient(to right, #0f2027, #203a43, #2c5364); display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;">
+ 
+<img src="/static/imgs/home.jpg" height="690px" weight="700px" alt="">
+    </div>
+    {% endblock body %}
