--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 Services
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="/service1">PrioritAIze</a>
+                <a class="dropdown-item" href="/task">PrioritAIze</a>
                 <a class="dropdown-item" href="/service2">Task Timer</a>
                
             </li>
